# babelfish

./: .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  HISTORY.rst  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
babelfish/: __init__.py  compat.py  country.py  exceptions.py  extensions.py  iso.py  language.py  region.py  script.py  tests.py  utils.py
babelfish/converters/: __init__.py  alpha2.py  alpha3b.py  alpha3t.py  countrydemonym.py  countryname.py  countryunm49.py  demonym.py  name.py  opensubtitles.py  scope.py  type.py
babelfish/data/: country-demonyms.txt  get_files.py  iso15924-utf8-20121016.txt  opensubtitles_languages.txt  un-m49.csv
docs/: Makefile  conf.py  index.rst
docs/_templates/: sidebar-intro.html
docs/api/: converter_bases.rst  country.rst  exceptions.rst  language.rst  script.rst
scripts/: test.sh
tests/: test_converters.py  test_country.py  test_country_converters.py  test_language.py  test_region.py  test_script.py  test_serialize.py
