[tool.poetry]
name = "babelfish"
version = "0.6.0"
description = "A module to work with countries and languages"
authors = [
    "Antoine Bertin <ant.bertin@gmail.com>",
    "Nicolas Wack <wackou@gmail.com>",
    "Rémi Alvergnat <toilal.dev@gmail.com>",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/Diaoul/babelfish"
keywords = [
    "language",
    "country",
    "locale",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["data/"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
